日報チェック一覧のデザイン修正

--- a/app/assets/stylesheets/blocks/report/_report_checks.sass
+++ b/app/assets/stylesheets/blocks/report/_report_checks.sass
@@ -1,26 +1,25 @@
 $report-header-author: 3.5rem
-.report-checks
-  +position(relative)
-  max-width: 52rem
-  +margin(horizontal, auto)
-  border-radius: .25rem
 
-.report-check
-  +position(relative)
-  border-radius: .25rem
-  margin-bottom: 2rem
-  padding-left: $report-header-author + 1.25rem
-  +media-breakpoint-down(sm)
-    padding-left: 0
-    margin-bottom: 1rem
-
-.report-check__body
+.check__inner
+  margin-left: 5rem
   background-color: $base-color
-  +padding(horizontal, 1rem)
   border-radius: .25rem
-  +relative
+  box-shadow: rgba(black, .2) 0 .0625rem .125rem
+  margin-bottom: 2rem
+  +position(relative)
   +media-breakpoint-down(sm)
     &::before,
     &::after
       content: none
+
+.check__header
+  padding: 1rem 2rem
+  border-bottom: $background-color solid .0625rem
+  +media-breakpoint-down(sm)
+    padding: 2.5rem 1rem 1rem
+
+.check__title
+  +text-block(1.1rem, 600)
+  +media-breakpoint-down(sm)
+    font-size: 1rem
 
