--- a/app/assets/stylesheets/blocks/report/_report.sass
+++ b/app/assets/stylesheets/blocks/report/_report.sass
@@ -101,11 +101,6 @@ $report-header-author: 6rem
   +media-breakpoint-down(sm)
     margin-bottom: 1rem
 
-.report-check-container
+.report-checks-container
   max-width: 52rem
   +margin(horizontal, auto)
-
-.report-check-container__title
-  +text-block(1.25rem 1.45 1rem)
-  +media-breakpoint-down(sm)
-    margin-bottom: 1rem
