--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -3,8 +3,10 @@
     header.report__header
       h1.report__title
         = report.title
-        - if @report.checks.any?
-          i.fa.fa-check-circle-o
+        - if @checks.any?
+          .stamp.stamp-approve
+            span = @checks.last.created_at.strftime('%Y/%m/%d')
+            span = @checks.last.user.login_name
     .report__meta
       .report__author-name
         = report.user.login_name
