--- a/app/assets/stylesheets/blocks/report/_report_checks.sass
+++ b/app/assets/stylesheets/blocks/report/_report_checks.sass
@@ -6,9 +6,9 @@ $report-header-author: 3.5rem
   background-color: $base-color
   border-radius: .25rem
   box-shadow: rgba(black, .2) 0 .0625rem .125rem
-  margin-bottom: 2rem
   +position(relative)
   +media-breakpoint-down(sm)
+    margin-left: 0
     &::before,
     &::after
       content: none
@@ -17,7 +17,7 @@ $report-header-author: 3.5rem
   padding: 1rem 2rem
   border-bottom: $background-color solid .0625rem
   +media-breakpoint-down(sm)
-    padding: 2.5rem 1rem 1rem
+    padding: 1rem 1rem 1rem
 
 .check__title
   +text-block(1.1rem, 600)
