デザイン崩れを修正 スタンプのデザイン調整

--- a/app/assets/stylesheets/blocks/form/_markdown-form.sass
+++ b/app/assets/stylesheets/blocks/form/_markdown-form.sass
@@ -1,10 +1,13 @@
-.practices-edit__input
+.markdown-form__text-area
   min-height: 22rem
   +media-breakpoint-down(sm)
     margin-bottom: 1rem
 
-.practices-edit__preview
+.markdown-form__preview
   background-color: $base-color
   padding: .5rem
   +text-block(.875rem 1.8 1.4em)
   border-radius: .25rem
+  min-height: 22rem
+  +media-breakpoint-down(sm)
+    margin-bottom: 1rem
