--- a/app/assets/stylesheets/blocks/report/_report-comments.sass
+++ b/app/assets/stylesheets/blocks/report/_report-comments.sass
@@ -37,6 +37,8 @@ $report-header-author: 3.5rem
     &::before,
     &::after
       content: none
+  .report-comment.is-correct_answer &
+    border: solid .125rem $accent-color
 
 .report-comments__description
   +padding(vertical, 1rem)
