--- a/app/assets/stylesheets/blocks/shared/_pagination.sass
+++ b/app/assets/stylesheets/blocks/shared/_pagination.sass
@@ -3,12 +3,13 @@
   max-width: 62.5rem
   +margin(horizontal, auto)
   &.is-top
-    margin-bottom: 1rem
+    margin-bottom: 1.5rem
   &.is-bottom
-    margin-top: 1rem
+    margin-top: 1.5rem
 
 .pagination__items
   display: flex
+  justify-content: center
 
 .pagination__item
   +padding(horizontal, .125rem)
