--- a/app/views/practices/_form.html.slim
+++ b/app/views/practices/_form.html.slim
@@ -17,20 +17,20 @@
       .row.js-markdown-parent
         .col-md-6.col-xs-12
             = f.label :description, class: 'a-label'
-            = f.text_area :description, class: 'a-textarea js-warning-form js-markdown-input practices-edit__input'
+            = f.text_area :description, class: 'a-textarea js-warning-form js-markdown-input markdown-form__text-area'
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
-          .js-markdown-preview.is-long-text-style.practices-edit__input.practices-edit__preview
+          .js-markdown-preview.is-long-text-style.markdown-form__preview
     .form-item
       .row.js-markdown-parent
         .col-md-6.col-xs-12
           = f.label :goal, class: 'a-label'
-          = f.text_area :goal, class: 'a-textarea js-markdown-input js-warning-form practices-edit__input'
+          = f.text_area :goal, class: 'a-textarea js-markdown-input js-warning-form markdown-form__text-area'
         .col-md-6.col-xs-12
           .a-label
             | プレビュー
-          .js-markdown-preview.is-long-text-style.practices-edit__input.practices-edit__preview
+          .js-markdown-preview.is-long-text-style.markdown-form__preview
   .form-actions
     ul.form-actions__items
       li.form-actions__item
