--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -5,7 +5,7 @@ header.page-header.is-margin-bottom-0
       h2.page-header__title Q&A一覧
       = link_to new_question_path, class: "is-button-standard-md-warning" do
         i.fa.fa-plus
-        | 新規質問
+        = t("new_question")
 
 .page-body
   nav.tab-nav
