--- a/app/views/users/_nda_modal.slim
+++ b/app/views/users/_nda_modal.slim
@@ -1,4 +1,4 @@
-.modal.fade#nda-modal(tabindex='-1' role='dialog' aria-labelledby='nda-modalLabel' aria-hidden='true')
+.modal#nda-modal(tabindex='-1' role='dialog' aria-labelledby='nda-modalLabel' aria-hidden='true')
   .modal-dialog role="document" 
     .modal-content
       .modal-header
