--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -22,6 +22,8 @@ $gray-light: #818a91
 $gray-lighter: #eceeef
 $gray-lightest: #f7f7f9
 
+$stamp-color: #f00
+
 $primary: #304ca2
 $success: #98c96c
 $info: #7ac3d3
