--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,4 +1,11 @@
-h3= t('new_question')
+header.page-header
+  .container
+    .page-header__container
+      h2.page-header__title
+        = t('new_question')
+      = link_to questions_path, class: 'is-button-standard-md-secondary' do
+        i.fa.fa-angle-left
+        = t('to_index_of_questions')
 .page-body
   .container
       = render 'form', question: @question
