--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -12,27 +12,21 @@ header.page-header
 .page-body
   .container    
     = render 'report', report: @report
-    .report-checks-container
-      - unless current_user.checks.find_by(report_id: params[:id]) or current_user == @report.user
-        .report-check-button
-          = render 'reports/report_check_form'
     .report-comments-container
       h2.report-comments-container__title
         = t('comments')
         - @comments.any?
-        = @comments.count
-        = t('comments_count')
+        span.report-comments-container__title-count
+          = @comments.count
       .report-comments
         - if @comments.any?
           - @comments.each do |comment|
             = render "report_comment", report: @report, comment: comment
       = render "report_comment_form"
       - if @checks.any?
-        .check__inner
-          header.check__header
-            h1.check__title
-              = t('check')
-              = @checks.count
-              = t('check_count')
-          - @checks.each do |check|
-            = render 'reports/report_check', report: @report, check: check
+        .report-checks
+          h3.report-checks__title
+            = t("we_checked")
+          ul.report-checks__items
+            - @checks.each do |check|
+              = render 'reports/report_check', report: @report, check: check
