--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -16,15 +16,15 @@ header.page-header
         .card-header
           h2.card__title= t('helpers.label.practice.description')
         .card-block
-          .practice.js-target-blank.is-long-text-style
-            = markdown @practice.description
+          .practice.js-markdown-view.js-target-blank.is-long-text-style
+            = @practice.description
           
       .card
         .card-header
           h2.card__title= t('helpers.label.practice.goal')
         .card-block
-          .goal.js-target-blank.is-long-text-style
-            = markdown @practice.goal
+          .goal.js-markdown-view.js-target-blank.is-long-text-style
+            = @practice.goal
 
       .page-actions
         ul.page-actions__items
@@ -49,7 +49,7 @@ header.page-header
 
     .col-md-6.col-xs-12
       // TODO 関連する質問を表示
-      = render 'temp_questions'
+      //= render 'temp_questions'
       = render 'reports'
 
     .col-xs-12
