--- a/app/views/pages/show.html.slim
+++ b/app/views/pages/show.html.slim
@@ -15,9 +15,8 @@ header.page-header
       header.entry-header
         h3.entry-header__title
           = @page.title
-      .entry-body
-        .js-target-blank.is-long-text-style
-          = markdown @page.body
+      .entry-body.js-markdown-view.js-target-blank.is-long-text-style
+        = @page.body
 
 .form-actions
   .container
