--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -19,8 +19,8 @@ header.page-header
           = @question.user.login_name
         time.report__created-at(datetime="#{@question.created_at.to_datetime}" pubdate="pubdate")
           = l @question.updated_at, format: :date_long_with_time
-      .report__description.js-target-blank.is-long-text-style
-        = emojify(markdown(@question.description))
+      .report__description.js-markdown-view.js-target-blank.is-long-text-style
+        = @question.description
       footer.report__body-footer
         .report__body-footer-container
           - if @question.user_id == current_user.id
