全ページに最新の日報を表示するようにした

--- a/app/views/reports/_report_list_item.html.slim
+++ b/app/views/reports/_report_list_item.html.slim
@@ -25,5 +25,6 @@
       - if report.checks.any?
         .report-list-item-meta__comment-count
           .report-list-item-meta__comment-count-label
-            i.fa.fa-check-circle-o
+            i.fa.fa-check
+          .report-list-item-meta__comment-count-value
             = report.checks.count
