--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -3,7 +3,7 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title
-        = emojify(@practice.title)
+        = @practice.title
       .page-header__action
         = link_to practices_path, class: 'is-button-standard-md-secondary' do
           i.fa.fa-angle-left
