recent-reports を共通化

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -31,3 +31,4 @@ html.is-admin lang="ja"
           .recent-reports__items
             - @reports.each do |report|
               = render 'reports/recent_reports', report: report
+    = render('to_top')
