--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,9 +25,10 @@ html.is-application lang="ja"
       main.page
         = yield
     - unless yield(:page_classes).include?('no-recent-reports')
-      - if all_recent_reports.present?
+      - recent_reports
+      - if @reports.present?
         .recent-reports
           .recent-reports__items
-            - all_recent_reports.each do |report|
+            - @reports.each do |report|
               = render 'reports/recent_reports', report: report
     = render('to_top')
