markdownのblockquoteが出力されなかったのを修正

--- a/app/assets/stylesheets/settings/helpers/long-text.sass
+++ b/app/assets/stylesheets/settings/helpers/long-text.sass
@@ -14,7 +14,7 @@
     +media-breakpoint-down(sm)
       +text-block(1em 1.4 .6em)
   p
-    +text-block(.9375rem 1.9 1.4em)
+    +text-block(1rem 1.8 1.4em)
     +media-breakpoint-down(sm)
       +text-block(.875rem 1.8 1em)
   a
@@ -53,6 +53,10 @@
   .twitter-tweet
     +margin(horizontal, auto)
     margin-bottom: 2.5rem !important
+  blockquote
+    border-left: solid .25rem $background-color
+    padding-left: .75rem
+    margin-bottom: 2rem
   iframe
     +margin(horizontal, auto)
     margin-bottom: 2rem
