--- a/app/views/comments/edit.html.slim
+++ b/app/views/comments/edit.html.slim
@@ -1,7 +1,8 @@
 header.page-header
   .container
-    h2.page-header__title
-      = t('editing_comment')
+    .page-header__container
+      h2.page-header__title
+        = t('editing_comment')
 
 .page-body
   .container
