--- a/app/assets/stylesheets/blocks/main-visual/_main-visual-nav.sass
+++ b/app/assets/stylesheets/blocks/main-visual/_main-visual-nav.sass
@@ -2,7 +2,7 @@
   +position(absolute, left 0, top 0, right 0, 3)
   +media-breakpoint-down(sm)
     +position(fixed, left auto, right 0, top 0, bottom 0)
-    background-color: #ec4963
+    background-color: #545758
     width: 0
     overflow: hidden
     transition: all .2s ease-in
