--- a/app/assets/stylesheets/blocks/welcome/_welcome.sass
+++ b/app/assets/stylesheets/blocks/welcome/_welcome.sass
@@ -7,6 +7,8 @@
   border-bottom: solid .0625rem #eee
   +media-breakpoint-down(sm)
     +padding(vertical, 2rem)
+  &.is-auth-form
+    background-color: $background-color
 
 .welcome-section__title
   +text-block(1.75rem 1.45 1.25rem, 600 center #ec4963)
