--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -42,6 +42,7 @@ $danger: #dd6583
   &:active
     color: #b3430b
 
+$placeholder-text: #d4d4d4
 
 $luma-contrast-bright-color: $default-text
 $luma-contrast-dark-color: $reversal-text
