--- a/app/views/home/_administrator.slim
+++ b/app/views/home/_administrator.slim
@@ -26,16 +26,16 @@ section.welcome-section#administrator
                           | プログラマー
                       ul.welcome-small-section__sns
                         li.welcome-small-section__sns-item
-                          = link_to '' do
+                          = link_to 'https://github.com/komagata' do
                             | GitHub
                         li.welcome-small-section__sns-item
                           = link_to '' do
                             | Blog
                         li.welcome-small-section__sns-item
-                          = link_to '' do
+                          = link_to 'https://twitter.com/komagata' do
                             | Twitter
                         li.welcome-small-section__sns-item
-                          = link_to '' do
+                          = link_to 'https://www.facebook.com/komagata1111' do
                             | Facebook
 
           .col-sm-12.col-md-6
@@ -53,23 +53,24 @@ section.welcome-section#administrator
                           | デザイナー
                       ul.welcome-small-section__sns
                         li.welcome-small-section__sns-item
-                          = link_to '' do
+                          = link_to 'https://github.com/machida' do
                             | GitHub
+                        //
+                          li.welcome-small-section__sns-item
+                            = link_to '' do
+                              | Blog
                         li.welcome-small-section__sns-item
-                          = link_to '' do
-                            | Blog
-                        li.welcome-small-section__sns-item
-                          = link_to '' do
+                          = link_to 'https://twitter.com/machida' do
                             | Twitter
                         li.welcome-small-section__sns-item
-                          = link_to '' do
+                          = link_to 'https://www.facebook.com/teppeimachida' do
                             | Facebook
 
     section.welcome-child-section
       h3.welcome-child-section__title
         | 運営サービス
       .welcome-child-section__description.is-lead-text
-        p
+        p.is-text-align-center-md-up
           | 作業週にはこれらのサービスを手伝っていただきます。
       .welcome-small-sections
         .row.is-gutter-width-32
