--- a/app/views/home/_eligibility.slim
+++ b/app/views/home/_eligibility.slim
@@ -7,7 +7,7 @@ section.welcome-section#eligibility
       h3.welcome-child-section__title
         | 基本的に誰でも参加OK
       .welcome-child-section__description.is-lead-text
-        p
+        p.is-text-align-center-md-up
           | 基本的に誰でも参加OKですが、少しだけ条件があります。
           br
           | もちろん、国籍、性別、年齢、学歴、プログラム経験などの制限はありません。
@@ -34,15 +34,15 @@ section.welcome-section#eligibility
               .welcome-small-section__inner
                 = image_tag('time.svg', class: 'welcome-small-section__icon')
                 h3.welcome-small-section__title
-                  | 週16時間以上
+                  | 週24時間以上
                 .welcome-small-section__description
-                  p 一週間に合計16時間以上インターンの活動ができることが条件です。ただし、事前に連絡をしていただければ、長期休暇、しばらくの間活動休止できます。
+                  p 週三日以上の稼働で、一週間の合計が24時間以上インターンの活動ができることが条件です。ただし、事前に連絡をしていただければ、長期休暇を取ったり、しばらくの間活動休止ができます。
 
     section.welcome-child-section
       h3.welcome-child-section__title
         | 自宅からリモート参加もOK
       .welcome-child-section__description.is-lead-text
-        p
+        p.is-text-align-center-md-up
           | オフィスに通う一般的なインターンだけでなく、
           br.is-hidden-sm-down
           | インターネット経由で自宅からリモートで参加することも可能です。
@@ -69,7 +69,7 @@ section.welcome-section#eligibility
                     .col-xs-12.col-md-3
                       = image_tag('remote.svg', class: 'welcome-child-section__top-image')
                     .col-xs-12.col-md-9
-                      p オフィスには出社せず、離れた場所からインターンをすることをリモートインターンと呼んでいます。自分の都合のいい時間に自宅やカフェなど、自分の好きな場所からインターンに参加できます。週の活動時間の合計が16時間を超えればいいので、一日8時間やる必要はありません。育児の合間や、仕事、学校からの帰宅後にインターンを行うことができます。自分の都合のいい時間にインターンができますが、活動する曜日と時間は決めていただく必要があります。仕事の都合などで、活動時間の変更があった場合は都度チャットで連絡をしていただきます。
+                      p オフィスには出社せず、離れた場所からインターンをすることをリモートインターンと呼んでいます。自分の都合のいい時間に自宅やカフェなど、自分の好きな場所からインターンに参加できます。週の活動時間の合計が24時間を超えればいいので、一日8時間やる必要はありません。育児の合間や、仕事、学校からの帰宅後にインターンを行うことができます。自分の都合のいい時間にインターンができますが、活動する曜日と時間は決めていただく必要があります。仕事の都合などで、活動時間の変更があった場合は都度チャットで連絡をしていただきます。
 
     section.welcome-child-section
       h3.welcome-child-section__title
