--- a/app/views/home/_tutorials.slim
+++ b/app/views/home/_tutorials.slim
@@ -5,7 +5,7 @@ section.welcome-section#tutorials
       | 何を学ぶの？
     section.welcome-child-section
       .welcome-child-section__description.is-lead-text
-        p
+        p.is-text-align-center-md-up
           | 学習内容は以下になります。
           br.is-hidden-sm-down
           | 全てを終えるまで、プログラム未経験の方だと一年以上、
