--- a/app/assets/stylesheets/blocks/auth-form/_auth-form-item.sass
+++ b/app/assets/stylesheets/blocks/auth-form/_auth-form-item.sass
@@ -1,21 +1,49 @@
 .auth-form-item
-  margin-bottom: 1rem
+  margin-bottom: 1.25rem
   &:last-child
     margin-bottom: 0
 
+.auth-form-item__twitter-input-container
+  position: relative
+  &::before
+    content: '@'
+    +text-block(1rem 1, flex)
+    align-items: center
+    justify-content: center
+    +size(2rem 100%)
+    +position(absolute, left 0, top 0)
+    background-color: $background-color
+    +border-radius(left, .25rem)
+    border: solid .0625rem #c1c5b9
+  .a-sm-text-input
+    padding-left: 2.5rem
+
 .auth-form-item__help
-  margin-top: .375rem
+  margin-top: .5rem
   p
-    +text-block(.75rem 1.45)
+    +text-block(.75rem 1.5)
 
 .auth-form-item__help-link
-  +text-block(.75rem 1.45)
+  +text-block(.75rem 1.5)
   +hover-link-reversal
+  cursor: pointer
+  +default-link
 
-.auth-form-item__radio-buttons
-  margin-top: .5rem
-  margin-bottom: -.5rem
-  &.is-half
-    display: flex
-    flex-wrap: wrap
-    +margin(horizontal, -.5rem)
+.auth-form-item__remember-me
+  +text-block(.875rem)
+  cursor: pointer
+
+.auth-form-item__remember-me-input
+  margin-right: .25rem
+
+.auth-form-item__pp
+  h3
+    +text-block(.75rem 1.4 .375rem, 600)
+  p
+    +text-block(.75rem 1.5 .75rem)
+
+.auth-form-item__error
+  +text-block(.75rem 1, $reversal-text inline-block)
+  background-color: $danger
+  padding: .25rem .5rem
+  margin-top: .25rem
