--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,23 +12,27 @@ html.is-application lang="ja"
     = javascript_include_tag 'application'
     = javascript_include_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js', integrity: 'sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==', crossorigin: 'anonymous'
     = csrf_meta_tags
+    = yield(:import_javascript)
     javascript:
     - if head_last = yield(:head_last)
       = head_last
   body(class="#{body_class} #{yield(:page_classes)}" id ="body")
-    - unless yield(:page_classes).include?('no-global-nav')
-      = render 'global_nav'
+    - if current_user
+      - unless yield(:page_classes).include?('no-global-nav')
+        = render 'global_nav'
     .wrapper.js-open-drawer-wrapper
-      - unless yield(:page_classes).include?('no-header')
-        = render 'header'
+      - if current_user
+        - unless yield(:page_classes).include?('no-header')
+          = render 'header'
       = render 'alert'
       main.page
         = yield
-    - unless yield(:page_classes).include?('no-recent-reports')
-      - recent_reports
-      - if @reports.present?
-        .recent-reports
-          .recent-reports__items
-            - @reports.each do |report|
-              = render 'reports/recent_reports', report: report
+    - if current_user.present?
+      - unless yield(:page_classes).include?('no-recent-reports')
+        - recent_reports
+        - if @reports.present?
+          .recent-reports
+            .recent-reports__items
+              - @reports.each do |report|
+                = render 'reports/recent_reports', report: report
     = render('to_top')
