--- a/app/views/home/_form.slim
+++ b/app/views/home/_form.slim
@@ -1,5 +1,5 @@
 section.welcome-section.is-auth-form
-  .container
+  .container#form
     h2.welcome-section__title
       | インターンに申し込む
     section.welcome-child-section
