--- a/app/assets/stylesheets/blocks/main-visual/_main-visual-nav.sass
+++ b/app/assets/stylesheets/blocks/main-visual/_main-visual-nav.sass
@@ -1,5 +1,12 @@
 .main-visual-nav
   +position(absolute, left 0, top 0, right 0, 3)
+  &.is-fixed
+    +position(fixed, left 0, top 0)
+    +size(100% 4rem)
+    background-color: #ec4963
+    transition: all .2s ease-in
+    .container
+      height: 100%
   +media-breakpoint-down(sm)
     +position(fixed, left auto, right 0, top 0, bottom 0)
     background-color: #545758
@@ -14,10 +21,37 @@
 
 .main-visual-nav__container
   +position(relative)
+  .main-visual-nav.is-fixed &
+    height: 100%
+    display: flex
+    justify-content: space-between
+
+.main-visual-nav__logo-link
+  +size(0)
+  opacity: 0
+  display: block
+  overflow: hidden
+  transition: all .2s ease-in
+  .main-visual-nav.is-fixed &
+    display: flex
+    opacity: 1
+    +size(auto 100%)
+    height: 100%
+    align-items: center
+  +media-breakpoint-down(sm)
+    display: none
+
+.main-visual-nav__logo-image
+  +size(auto 1.75rem)
+  display: block
+  +media-breakpoint-down(md)
+    height: 1rem
 
 .main-visual-nav__items
   +position(absolute, right 0, top 1.25rem)
   display: flex
+  .main-visual-nav.is-fixed &
+    position: relative
   +media-breakpoint-down(sm)
     display: block
     position: static
@@ -32,6 +66,8 @@
   +text-block(.875rem 1.45, block $reversal-text)
   +padding(vertical, .25rem)
   +hover-link
+  +media-breakpoint-down(md)
+    font-size: .75rem
   +media-breakpoint-down(sm)
     height: 2.75rem
     +padding(horizontal, .75rem)
