--- a/app/assets/stylesheets/blocks/report/_reports.sass
+++ b/app/assets/stylesheets/blocks/report/_reports.sass
@@ -27,6 +27,9 @@
   +media-breakpoint-down(sm)
     +size(2.5rem auto)
 
+.report-list-item__checked-author-icon
+  border-radius: 50%
+
 .report-list-item__header
   display: flex
   align-items: center
